# witboost-hasura-specific-provisioner

./: .gitignore  .gitlab-ci.yml  README.md
hasura-specific-provisioner/: .pre-commit-config.yaml  Dockerfile  interface-specification.yml  logging.yaml  pyproject.toml  server_start.sh
hasura-specific-provisioner/docs/: API.md  data_sources.md
hasura-specific-provisioner/src/: __init__.py  dependencies.py  main.py  models.py
hasura-specific-provisioner/src/common/model/: config.py  descriptor.py  hasura.py  rolemapping.py
hasura-specific-provisioner/src/common/parsing/: descriptor.py
hasura-specific-provisioner/src/services/: rolemapper.py
hasura-specific-provisioner/src/services/hasura/: auth.py  client.py  provisioner.py
hasura-specific-provisioner/tests/integration/: hasura-ee-snowflake-docker-compose.yaml  rolemapper-openapi-specification.yml  test_hasura_metadata_client.py  test_role_mapper_client.py
hasura-specific-provisioner/tests/unit/: test_descriptors.py  test_main.py  test_parsing.py  test_provisioner.py  test_requests.py
helm/: Chart.yaml  README.md  values.yaml
helm/sample/: external-secrets.yaml  fake-secret-store.yaml
helm/templates/: configmap.yaml  deployment.yaml
hld/: HLD.md  auth-webhook-rolemapper-interface-specification.yml  hld.drawio
